# docs/swagger.yaml
@@ -27,7 +27,49 @@ definitions:
       longitude:
         type: number
     type: object
-  model.LocationDTO:
+  model.Task:
+    properties:
+      date:
+        type: string
+      description:
+        type: string
+      endTime:
+        type: string
+      groupId:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      startTime:
+        type: string
+      utillity:
+        $ref: '#/definitions/model.Utillity'
+    type: object
+  model.TaskDTO:
+    properties:
+      date:
+        type: string
+      description:
+        type: string
+      endTime:
+        type: string
+      groupId:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      primaryKey:
+        type: string
+      rowKey:
+        type: string
+      startTime:
+        type: string
+      utillity:
+        type: string
+    type: object
+  model.Utillity:
     properties:
       created_at:
         type: string
@@ -42,54 +84,6 @@ definitions:
       ocean:
         type: string
     type: object
-  model.Task:
-    properties:
-      date:
-        type: string
-      description:
-        type: string
-      endTime:
-        type: string
-      groupId:
-        type: string
-      id:
-        type: string
-      location:
-        allOf:
-        - $ref: '#/definitions/model.LocationDTO'
-        description: has to be object
-      name:
-        type: string
-      startTime:
-        type: string
-    type: object
-  model.TaskDTO:
-    properties:
-      date:
-        type: string
-      description:
-        type: string
-      endTime:
-        type: string
-      groupId:
-        type: string
-      id:
-        description: GUID
-        type: string
-      location:
-        description: has to be object
-        type: string
-      name:
-        type: string
-      primaryKey:
-        description: day + groupID
-        type: string
-      rowKey:
-        description: startTime + taskID
-        type: string
-      startTime:
-        type: string
-    type: object
 info:
   contact: {}
 paths:
@@ -102,6 +96,14 @@ paths:
           schema:
             $ref: '#/definitions/model.TaskDTO'
       summary: Gets all tasks
+    post:
+      description: Create dummy data
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: Create dummy data
   /schedule/{date}:
     get:
       description: Get a schedule by date
@@ -117,26 +119,6 @@ paths:
           schema:
             $ref: '#/definitions/model.TaskDTO'
       summary: Get schedule by date
-  /schedule/{date}/{groupid}:
-    get:
-      description: Get a list of tasks by date and group
-      parameters:
-      - description: Date
-        in: path
-        name: date
-        required: true
-        type: string
-      - description: Group ID
-        in: path
-        name: groupid
-        required: true
-        type: string
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.TaskDTO'
-      summary: Get the tasks by date and group
   /schedule/group/{groupid}:
     get:
       description: Get a list of tasks by  group
@@ -176,7 +158,7 @@ paths:
     delete:
       description: Delete a task
       parameters:
-      - description: ID
+      - description: id
         in: path
         name: id
         required: true
@@ -201,20 +183,6 @@ paths:
           schema:
             $ref: '#/definitions/model.TaskDTO'
       summary: Get a task by ID
-    patch:
-      description: Cancel a task
-      parameters:
-      - description: ID
-        in: path
-        name: id
-        required: true
-        type: string
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.CheckInDTO'
-      summary: Cancel a task
     put:
       description: Update a task
       parameters:
@@ -235,6 +203,21 @@ paths:
           schema:
             $ref: '#/definitions/model.TaskDTO'
       summary: Updates a task
+  /schedule/task/{id}/cancel:
+    post:
+      description: Cancel a task
+      parameters:
+      - description: ID
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.CheckInDTO'
+      summary: Cancel a task
   /schedule/task/{id}/checkin:
     post:
       description: CheckIn on a task
@@ -250,4 +233,33 @@ paths:
           schema:
             $ref: '#/definitions/model.CheckInDTO'
       summary: CheckIn on a task
+  /schedule/task/checkins:
+    get:
+      description: Get all checkins
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.CheckInDTO'
+      summary: Get all checkins
+  /schedule/task/checkins/{taskId}/{UserId}:
+    get:
+      description: Get a checkin for a task
+      parameters:
+      - description: Task ID
+        in: path
+        name: taskId
+        required: true
+        type: string
+      - description: User ID
+        in: path
+        name: UserId
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: boolean
+      summary: Get a checkin for a task
 swagger: "2.0"
