# model/LocationDTO.go
@@ -4,16 +4,11 @@ import (
 	"time"
 )
 
-type LocationDTO struct {
+type Utillity struct {
 	Id        string    `json:"id"`
 	Name      string    `json:"name"`
 	Icon      string    `json:"icon"`
 	CreatedAt time.Time `json:"created_at"`
 	Location  Location  `json:"location"`
 	Ocean     string    `json:"ocean"`
-}
-
-type Location struct {
-	Latitude  float64 `json:"latitude"`
-	Longitude float64 `json:"longitude"`
 }
