# model/Task.go
@@ -1,12 +1,14 @@
 package model
 
+import "time"
+
 type Task struct {
-	Id          string      `json:"id"`
-	GroupId     string      `json:"groupId"`
-	Name        string      `json:"name"`
-	Description string      `json:"description"`
-	Date        string      `json:"date"`
-	StartTime   string      `json:"startTime"`
-	EndTime     string      `json:"endTime"`
-	Location    LocationDTO `json:"location"` //has to be object
+	Id          string    `json:"id"`
+	GroupId     string    `json:"groupId"`
+	Name        string    `json:"name"`
+	Description string    `json:"description"`
+	Date        time.Time `json:"date"`
+	StartTime   time.Time `json:"startTime"`
+	EndTime     time.Time `json:"endTime"`
+	Utillity    Utillity  `json:"utillity"`
 }
